--- a/co.edu.uniquindio.parcial2/src/main/resources/co/edu/uniquindio/parcial2/parcial2/PrestamoApp.fxml
+++ b/co.edu.uniquindio.parcial2/src/main/resources/co/edu/uniquindio/parcial2/parcial2/PrestamoApp.fxml
@@ -24,7 +24,7 @@
                 </Tab>
                 <Tab text="Administrativa">
                     <content>
-
+                        <fx:include source="Administrativa.fxml" />
                     </content>
                 </Tab>
             </tabs>
