--- a/co.edu.uniquindio.parcial2/src/main/resources/co/edu/uniquindio/parcial2/parcial2/Busqueda.fxml
+++ b/co.edu.uniquindio.parcial2/src/main/resources/co/edu/uniquindio/parcial2/parcial2/Busqueda.fxml
@@ -11,37 +11,22 @@
 
 <AnchorPane prefHeight="676.0" prefWidth="964.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.parcial2.parcial2.viewcontroller.BusquedaViewController">
     <children>
-        <SplitPane layoutX="20.0" layoutY="14.0" orientation="VERTICAL" prefHeight="270.0" prefWidth="922.0">
+        <SplitPane layoutX="20.0" layoutY="14.0" orientation="VERTICAL" prefHeight="288.0" prefWidth="922.0">
             <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="222.0" prefWidth="897.0">
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="271.0" prefWidth="921.0">
                     <children>
-                        <Label layoutX="118.0" layoutY="129.0" text="Ingrese el id del objeto:" />
+                        <Label layoutX="118.0" layoutY="129.0" text="Ingrese el documento del cliente" />
                         <TextField fx:id="txtBuscar" layoutX="298.0" layoutY="125.0" />
-                        <Button fx:id="btnBuscar" layoutX="608.0" layoutY="124.0" mnemonicParsing="false" onAction="#onBuscarObjeto" prefHeight="26.0" prefWidth="150.0" text="Consultar" />
+                        <Button fx:id="btnBuscar" layoutX="608.0" layoutY="124.0" mnemonicParsing="false" onAction="#onBuscarCliente" prefHeight="26.0" prefWidth="150.0" text="Consultar" />
                     </children></AnchorPane>
             </items>
         </SplitPane>
         <Separator layoutY="293.0" prefHeight="18.0" prefWidth="955.0" />
-        <SplitPane dividerPositions="0.5000000000000001" layoutX="20.0" layoutY="315.0" orientation="VERTICAL" prefHeight="346.0" prefWidth="923.0">
-            <items>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="179.0" prefWidth="932.0">
-                    <children>
-                        <Label layoutX="14.0" layoutY="51.0" prefHeight="23.0" prefWidth="216.0" text="Ingrese el rango para la busqueda:" />
-                        <TextField fx:id="txtRango" layoutX="238.0" layoutY="50.0" />
-                        <Button fx:id="btnConsultar" layoutX="572.0" layoutY="50.0" mnemonicParsing="false" onAction="#onConsultarRango" prefHeight="26.0" prefWidth="150.0" text="Consultar" />
-                    </children>
-                </AnchorPane>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-                    <children>
-                        <TableView fx:id="tablaPrestamos" prefHeight="200.0" prefWidth="944.0">
-                            <columns>
-                                <TableColumn fx:id="tcIdProducto" prefWidth="442.39997559785843" text="id" />
-                                <TableColumn fx:id="tcNombre" prefWidth="501.6000061035156" text="nombre" />
-                            </columns>
-                        </TableView>
-                    </children>
-                </AnchorPane>
-            </items>
-        </SplitPane>
+      <TableView fx:id="tablaClientes" layoutX="6.0" layoutY="311.0" prefHeight="345.0" prefWidth="944.0">
+         <columns>
+            <TableColumn fx:id="tcCedula" prefWidth="442.39997559785843" text="cedula" />
+            <TableColumn fx:id="tcNombre" prefWidth="501.6000061035156" text="nombre" />
+         </columns>
+      </TableView>
     </children>
 </AnchorPane>
