--- a/co.edu.uniquindio.parcial2/src/main/resources/co/edu/uniquindio/parcial2/parcial2/PrestamoApp.fxml
+++ b/co.edu.uniquindio.parcial2/src/main/resources/co/edu/uniquindio/parcial2/parcial2/PrestamoApp.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -9,20 +8,7 @@
     <children>
         <TabPane layoutX="14.0" layoutY="14.0" prefHeight="676.0" prefWidth="964.0" tabClosingPolicy="UNAVAILABLE">
             <tabs>
-                <Tab text="Cliente">
-                    <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                            <children>
-                                <SplitPane layoutX="14.0" layoutY="7.0" orientation="VERTICAL" prefHeight="621.0" prefWidth="931.0">
-                                    <items>
-                                        <fx:include source="Cliente.fxml" />
-                                    </items>
-                                </SplitPane>
-                            </children>
-                        </AnchorPane>
-                    </content>
-                </Tab>
-                <Tab text="Administrativa">
+                <Tab text="Parcial">
                     <content>
                         <fx:include source="Administrativa.fxml" />
                     </content>
